--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf">
         <div class="game">
           <div class="first">
-            <img src="https://play-lh.googleusercontent.com/pcLonuKNUK7ppPXw2KShFlzqRFVUK-CTFuhlSA1LH0AsJgb4f6ZkV5J-xCQvRpCEIkY=s48-rw"/>
+            <img src="https://wallpaperaccess.com/full/1673554.jpg"/>
           </div>
           <hr />
           <div class="sec">
@@ -113,27 +113,29 @@
           </div>
         </div></a>
 
+        <a href="https://play.google.com/store/apps/details?id=com.nazara.tinylabproductions.chhotabheem">
         <div class="game">
           <div class="first">
-            <img />
+            <img src="https://play-lh.googleusercontent.com/KAMUxEPsrib9K9ZmfME8D_5d9PC3wfIW7Ng10aRkRNCzv99yddvQgXAM6vkfXRJx21o=w526-h296-rw"/>
           </div>
           <hr />
           <div class="sec">
-            <div class="sec1"><img /></div>
-            <div class="sec2"></div>
+            <div class="sec1"><img src="https://play-lh.googleusercontent.com/Lb965HT_b1j_hNKiFX7CUfjWB8rxW8y-ucMIE_GFtc-QHcDHS5izLukeejnGuOHcYA=s48-rw"/></div>
+            <div class="sec2">Chhota Bheem Speed Racing - Of</div>
           </div>
-        </div>
+        </div></a>
 
+        <a href="https://play.google.com/store/apps/details?id=com.rvappstudios.abc_kids_toddler_tracing_phonics">
         <div class="game">
           <div class="first">
-            <img />
+            <img src="https://play-lh.googleusercontent.com/fDfx4QjGCd528dH14SMmDlLt4EsZqPNFVZuvVgO5HP733NIEhLYVZu7X4zrzIWdWrSA=w526-h296-rw"/>
           </div>
           <hr />
           <div class="sec">
-            <div class="sec1"><img /></div>
-            <div class="sec2"></div>
+            <div class="sec1"><img src="https://play-lh.googleusercontent.com/dubBqdZfWh4LPRnwhf6c0zTtYscOykYvjE7PK91aJ8K6RHwUjQYhQ42rkO3fVF5X4gYO=s48-rw"/></div>
+            <div class="sec2">ABC Kids</div>
           </div>
-        </div>
+        </div></a>
       </div>
     </section>
 
