--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf">
+        <a href="https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://wallpaperaccess.com/full/1673554.jpg"/>
@@ -60,7 +60,7 @@
       <h1>Top-rated games</h1>
       
       <div class="main">
-        <a href="https://play.google.com/store/apps/details?id=com.ludo.king">
+        <a href="https://play.google.com/store/apps/details?id=com.ludo.king" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/JE0EWjZ-5xtI7oVt_-DV50T7VBttJvwIDKJPVUr3gCPxHwcAhpta0bl8YXbBFQkNe0M=w526-h296-rw"/>
@@ -72,7 +72,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.rovio.angrybirdsfriends">
+        <a href="https://play.google.com/store/apps/details?id=com.rovio.angrybirdsfriends" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/Whwh43nM2cvEFVPjPH0uyf9ZgynC2oF0IG5C5TsBbr5OgN22jDQP9QuoCoXquj_eTS4=w526-h296-rw"/>
@@ -84,7 +84,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.chillingo.incrediblejack.android.rowgplay1">
+        <a href="https://play.google.com/store/apps/details?id=com.chillingo.incrediblejack.android.rowgplay1" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/WxLc8wsT74vrV3Nn1asqs6YWxo-qgCVOIYudVgu5l70HKQiz4GOGnyS3bHZHpm19bxX9=w526-h296-rw"/>
@@ -100,7 +100,7 @@
 
     <section>
       <h1>Cartoony games</h1>
-      <a  href="https://play.google.com/store/apps/details?id=com.outfit7.mytalkingangela2">
+      <a  href="https://play.google.com/store/apps/details?id=com.outfit7.mytalkingangela2" target="_blank">
       <div class="main">
         <div class="game">
           <div class="first">
@@ -113,7 +113,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.nazara.tinylabproductions.chhotabheem">
+        <a href="https://play.google.com/store/apps/details?id=com.nazara.tinylabproductions.chhotabheem" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/KAMUxEPsrib9K9ZmfME8D_5d9PC3wfIW7Ng10aRkRNCzv99yddvQgXAM6vkfXRJx21o=w526-h296-rw"/>
@@ -125,7 +125,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.rvappstudios.abc_kids_toddler_tracing_phonics">
+        <a href="https://play.google.com/store/apps/details?id=com.rvappstudios.abc_kids_toddler_tracing_phonics" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/fDfx4QjGCd528dH14SMmDlLt4EsZqPNFVZuvVgO5HP733NIEhLYVZu7X4zrzIWdWrSA=w526-h296-rw"/>
@@ -142,7 +142,7 @@
     <section>
       <h1>Racing games</h1>
       <div class="main">
-        <a href="https://play.google.com/store/apps/details?id=com.knights.bikesstunt.motomaster">
+        <a href="https://play.google.com/store/apps/details?id=com.knights.bikesstunt.motomaster" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/3lvqKinK0Fy7pBxqXURmeitdxzRJS-Bq2sXGZeF39I_zvdgVg1FwH33k9r0JKqMO6w=w526-h296-rw"/>
@@ -154,7 +154,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.notdoppler.renegaderacing">
+        <a href="https://play.google.com/store/apps/details?id=com.notdoppler.renegaderacing" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/ycT5zoQVQ1RtzS307BiZ48OZPlO5Je1Mjpa_OfEPfscer0xVTyH7kFAXK8jeOpO7Hgs=w2560-h1440-rw"/>
@@ -166,7 +166,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.combineinc.streetracing.driftthreeD">
+        <a href="https://play.google.com/store/apps/details?id=com.combineinc.streetracing.driftthreeD" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/HXoSbz87wD8eUFnDkBKoQfe5oeo8HZXEsnQfYCNREy_tsqHheVcT6dKcUaXpSE2r6Q=w526-h296-rw"/>
@@ -183,7 +183,7 @@
     <section>
       <h1>Board games</h1>
       <div class="main">
-        <a href="https://play.google.com/store/apps/details?id=com.arcsys.tictactoe">
+        <a href="https://play.google.com/store/apps/details?id=com.arcsys.tictactoe" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/HOu_OnvY3-64HiiR8Rc-o3ORlKDUlx1J69sKgb6ygtB9tVqrUmsavnLUBhPhjI69860=w526-h296-rw"/>
@@ -195,7 +195,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.llx.chess">
+        <a href="https://play.google.com/store/apps/details?id=com.llx.chess" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/zYl4OHVVhNJOxiA2YGQW-dgXFUKBcbVY542j8CJuQ16OCXzmB7Wd_BLQX1tDp4d3LhE=w526-h296-rw"/>
@@ -207,7 +207,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.ansangha.drreversi">
+        <a href="https://play.google.com/store/apps/details?id=com.ansangha.drreversi" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/UN5u94XjIea0Az4gzgKHEyCY3dLp1Xc5EtPhpt8Win3BiAtoajhkK1lkjqzoD6ahsHSS=w526-h296-rw"/>
@@ -224,7 +224,7 @@
     <section>
       <h1>Puzzle games</h1>
       <div class="main">
-        <a href="https://play.google.com/store/apps/details?id=wood.blockpuzzle.game.jewel.classic">
+        <a href="https://play.google.com/store/apps/details?id=wood.blockpuzzle.game.jewel.classic" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/mLvIfX7GbpO9o69FafgMtC9hvP2ewwe9IGTGsx4ikP4xbaZAI1_D7VXVlrR66ubcqgM=w526-h296-rw"/>
@@ -236,7 +236,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=com.androbaby.original2048">
+        <a href="https://play.google.com/store/apps/details?id=com.androbaby.original2048" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/Ycqn4rnQpbyyEjveJufpHibETgki8FHU9vUIBek8P1IRBDCziSDnf8coUU4dsfyeLFlC=w2560-h1440-rw"/>
@@ -248,7 +248,7 @@
           </div>
         </div></a>
 
-        <a href="https://play.google.com/store/apps/details?id=nd.cutejelly.fruit.farmdeluxe">
+        <a href="https://play.google.com/store/apps/details?id=nd.cutejelly.fruit.farmdeluxe" target="_blank">
         <div class="game">
           <div class="first">
             <img src="https://play-lh.googleusercontent.com/QXvwul73RinhKhSTWdqc5y_mIEOi7GtyIS289A2PigLH1DYb53Z4xlWyLpl9_nCssQS7=w526-h296-rw"/>
