--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="https://play.google.com/store/apps/details?id=com.geda.matino" target="_blank">
         <div class="game">
           <div class="first">
-            <img src="https://play-lh.googleusercontent.com/PTNos3m-JkxdCTDC7WOWf5WDcfUOTj-4TrQpkiPjdUoZfOm4zjvsQwHdWU1-CEVdpAg=w2560-h1440-rw"/>
+            <img src="https://play-lh.googleusercontent.com/PTNos3m-JkxdCTDC7WOWf5WDcfUOTj-4TrQpkiPjdUoZfOm4zjvsQwHdWU1-CEVdpAg=w2560-h1440-rw" height="100%" width="100%"/>
           </div>
           <hr />
           <div class="sec">
