--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <a href="https://play.google.com/store/apps/details?id=com.geda.matino" target="_blank">
         <div class="game">
           <div class="first">
-            <img src="https://play-lh.googleusercontent.com/PTNos3m-JkxdCTDC7WOWf5WDcfUOTj-4TrQpkiPjdUoZfOm4zjvsQwHdWU1-CEVdpAg=w2560-h1440-rw" height="100%" width="100%"/>
+            <img src="https://play-lh.googleusercontent.com/PTNos3m-JkxdCTDC7WOWf5WDcfUOTj-4TrQpkiPjdUoZfOm4zjvsQwHdWU1-CEVdpAg=w2560-h1440-rw" />
           </div>
           <hr />
           <div class="sec">
             <div class="sec1">
             <img
               src="https://play-lh.googleusercontent.com/870C98mjhoU7-MdGHajOTzXrVkpAzBq6jJuncsPpfv7S_GQbZ57rRdr-iqMg_UU1SA=s48-rw"
-            /></div>
+              height="100%" width="100%"/></div>
             <div class="sec2">Super Matio - Adventure Game</div>
           </div>
         </div></a>
@@ -43,7 +43,7 @@
         <a href="https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf" target="_blank">
         <div class="game">
           <div class="first">
-            <img src="https://wallpaperaccess.com/full/1673554.jpg"/>
+            <img src="https://wallpaperaccess.com/full/1673554.jpg" width="100%"/>
           </div>
           <hr />
           <div class="sec">
