--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img
               src="https://play-lh.googleusercontent.com/870C98mjhoU7-MdGHajOTzXrVkpAzBq6jJuncsPpfv7S_GQbZ57rRdr-iqMg_UU1SA=s48-rw"
               height="100%" width="100%"/></div>
-            <div class="sec2">Super Matio - Adventure Game</div>
+            <div class="sec2">Super Matino - Adventure Game</div>
           </div>
         </div></a>
  
@@ -43,7 +43,7 @@
         <a href="https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf" target="_blank">
         <div class="game">
           <div class="first">
-            <img src="https://wallpaperaccess.com/full/2406180.jpg" width="100%"/>
+            <img src="https://wallpaperaccess.com/full/2406180.jpg" />
           </div>
           <hr />
           <div class="sec">
