--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section>
-      <h1>Recommended for you</h1>
+      <h1 class=".h1">Recommended for you</h1>
       <div class="main">
         <a href="https://play.google.com/store/apps/details?id=com.geda.matino" target="_blank">
         <div class="game">
@@ -57,7 +57,7 @@
     </section>
 
     <section>
-      <h1>Top-rated games</h1>
+      <h1 class=".h1">Top-rated games</h1>
       
       <div class="main">
         <a href="https://play.google.com/store/apps/details?id=com.ludo.king" target="_blank">
@@ -99,7 +99,7 @@
     </section>
 
     <section>
-      <h1>Cartoony games</h1>
+      <h1 class=".h1">Cartoony games</h1>
       <a  href="https://play.google.com/store/apps/details?id=com.outfit7.mytalkingangela2" target="_blank">
       <div class="main">
         <div class="game">
@@ -140,7 +140,7 @@
     </section>
 
     <section>
-      <h1>Racing games</h1>
+      <h1 class=".h1">Racing games</h1>
       <div class="main">
         <a href="https://play.google.com/store/apps/details?id=com.knights.bikesstunt.motomaster" target="_blank">
         <div class="game">
@@ -181,7 +181,7 @@
     </section>
 
     <section>
-      <h1>Board games</h1>
+      <h1 class=".h1">Board games</h1>
       <div class="main">
         <a href="https://play.google.com/store/apps/details?id=com.arcsys.tictactoe" target="_blank">
         <div class="game">
@@ -222,7 +222,7 @@
     </section>
 
     <section>
-      <h1>Puzzle games</h1>
+      <h1 class=".h1">Puzzle games</h1>
       <div class="main">
         <a href="https://play.google.com/store/apps/details?id=wood.blockpuzzle.game.jewel.classic" target="_blank">
         <div class="game">
